# agentic_ai-alter_ego

./: .env.example  .gitignore  DEPLOYMENT_FIX.md  GEMINI.md  README.md  app.py  app_legacy.py  deploy_check.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/fixes/: 2026-03-19_fixes.md
docs/plan/: 2026-03-19.md
docs/reviews/: code_review_2026-03-21.md
src/alter_ego/: __init__.py  app.py  config.py  tools.py
src/alter_ego/models/: __init__.py
src/alter_ego/services/: __init__.py  chat_service.py  document_service.py  github_service.py  notification_service.py  tool_handler.py
src/alter_ego/utils/: __init__.py  logger.py
static/: github_cache.json  linkedin_placeholder.txt  portfolio_cache.json  summary.md  summary.txt
tests/: test_alter_ego.py
